# apollo-commerce

./: README.md
backend/: README.md  docker-compose.local.yml  manage.py  pyproject.toml
backend/apollo_commerce_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/apollo_commerce_api/core/: pagination.py
backend/apollo_commerce_api/tests/: utils.py
backend/categories/: models.py  router.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_alter_category_discount.py  0003_auto_20231025_1336.py  0004_alter_category_discount.py
backend/docker/local/django/: Dockerfile
backend/products/: filters.py  models.py  router.py  serializers.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_product_promotion_price.py  0004_alter_product_id.py
backend/products/tests/: conftest.py  factories.py  test_models.py
backend/users/migrations/: 0001_initial.py
frontend/: .env.development  README.md  index.html  package-lock.json  package.json
frontend/src/: global.d.ts  main.tsx
frontend/src/components/NavBar/: NavBar.tsx
frontend/src/components/ProductCard/: ProductCard.tsx
frontend/src/components/ProductCreateForm/: ProductCreateForm.tsx
frontend/src/components/ProductsTable/: ProductsTable.tsx
frontend/src/models/: product.ts
frontend/src/pages/: index.tsx
frontend/src/pages/IndexPage/: IndexPage.tsx
frontend/src/pages/ProductsPage/: ProductsPage.tsx
frontend/src/providers/: axios.tsx
frontend/src/routes/: index.tsx
